--- a/D12-HW-starting-template.html
+++ b/D12-HW-starting-template.html
@@ -114,6 +114,12 @@
         -ms-user-select: none;
         user-select: none;
       }
+      .card {
+        background-size: cover;
+      }
+      .card-img-top {
+        width: 100%;
+      }
 
       @media (min-width: 768px) {
         .bd-placeholder-img-lg {
